# ProjetoIntegrador2

./: README.md  readme-2.md  requirements.txt
Banco_de_dados/: modelo2.ipynb  (+3 more)
Site/: .env  .gitignore  Dockerfile  app.py  db.py  db_connection_data.py  db_connection_data_mockup.py  pyproject.toml  requirements.txt
Site/static/css/: administrador.css  agendamento.css  cadastros.css  dashboard.css  general.css  home.css  layout.css  list.css  login.css  register.css  register_client.css
Site/static/scripts/: address.js  dates.js  error.js  home.js  list_search.js  masks.js
Site/static/strings/: errors_strings.py  status_strings.py
Site/static/strings/adm/: clients_strings.py  dashboard_strings.py  register_client_strings.py  register_schedule_strings.py  register_work_strings.py  schedulings_strings.py  works_strings.py
Site/static/strings/landpage/: home_strings.py  login_strings.py
Site/templates/: cliente.html  jinja_administrador.html  jinja_agendamento.html  jinja_home.html  jinja_login.html  layout.html
Site/templates/adm/: jinja_administrador.html  jinja_cadastro_funcionarios.html  jinja_cadastro_serviços.html  jinja_clientes_cadastrados.html  jinja_dashboard.html  jinja_funcionarios_cadastrados.html  jinja_serviços_cadastrados.html  layout_adm.html
Site/templates/adm/Client/: jinja_client_register.html  jinja_clients_list.html
Site/templates/adm/Cliente/: jinja_cadastro_cliente.html
Site/templates/htmls_anteriores/: agendamento.html  dashboard.html  home.html  login.html
Site/templates/landpage/: jinja_home.html  jinja_login.html  layout.html
(+4 files in other folders)
